tests/purs/failing/RowConstructors2.out
Error found:
in module [33mMain[0m
at tests/purs/failing/RowConstructors2.purs:7:16 - 7:19 (line 7, column 16 - line 7, column 19)

  Could not match kind

    [33m# Type[0m

  with kind

    [33m# Type -> # Type[0m


while checking the kind of [33mRecord Foo[0m
in type synonym [33mBar[0m

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

